@@ -81,7 +81,7 @@ import java.lang.Character.UnicodeBlock;
  */
 public class TeXFormula {
 
-    public static final String VERSION = "1.0.1";
+    public static final String VERSION = "1.0.2";
 
     public static final int SERIF = 0;
     public static final int SANSSERIF = 1;
@@ -773,6 +773,11 @@ public class TeXFormula {
                 {
                     te = new TeXEnvironment(style, font);
                 }
+
+		if (interLineUnit != null) {
+		    te.setInterline(interLineUnit, interLineSpacing);
+		}
+
                 Box box = createBox(te);
                 TeXIcon ti;
                 if (widthUnit != null)
