@@ -1,4 +1,6 @@
 jlatexmath (1.0.2)
+	* Fix for ticket 1113: by default interline is 1ex (can be set with TeXIconBuilder::setInterLineSpacing (see Example7))
+
 	* Fix bug with maxwidth.
 
         * Use default Java font when char is in an unknown unicode block.   
